testdata/baselines/reference/submodule/conformance/jsDeclarationsParameterTagReusesInputNodeInEmit1.errors.txt
base.js(11,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
file.js(11,25): error TS2749: 'BaseFactory' refers to a value, but is being used as a type here. Did you mean 'typeof BaseFactory'?
file.js(12,27): error TS2749: 'BaseFactory' refers to a value, but is being used as a type here. Did you mean 'typeof BaseFactory'?


==== base.js (1 errors) ====
    class Base {
        constructor() {}
    }
    
    const BaseFactory = () => {
        return new Base();
    };
    
    BaseFactory.Base = Base;
    
    module.exports = BaseFactory;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
==== file.js (2 errors) ====
    /** @typedef {import('./base')} BaseFactory */
    /**
     * @callback BaseFactoryFactory
     * @param {import('./base')} factory
     */
    /** @enum {import('./base')} */
    const couldntThinkOfAny = {}
    
    /**
     *
     * @param {InstanceType<BaseFactory["Base"]>} base
                            ~~~~~~~~~~~
!!! error TS2749: 'BaseFactory' refers to a value, but is being used as a type here. Did you mean 'typeof BaseFactory'?
     * @returns {InstanceType<BaseFactory["Base"]>}
                              ~~~~~~~~~~~
!!! error TS2749: 'BaseFactory' refers to a value, but is being used as a type here. Did you mean 'typeof BaseFactory'?
     */
    const test = (base) => {
        return base;
    };
    